# hajj-umrah_backend

./: .dockerignore  .gitignore  Dockerfile  README.md  apply_migrations.sh  pyproject.toml  settings.yml  start.py  tmp.txt
.github/workflows/: blank.yml  dev_ci.yml
ci/: .dockerignore  Dockerfile  POSTGRES_SETUP.md  README.md  docker-compose.yml  postgres.Dockerfile  postgresql.conf.example
ci/nginx/: dev.conf
init-db/: README.md
migrations/: env.py
migrations/utils/: README.md  __init__.py  mock_data_generator.py
migrations/versions/: 9df30177b147_init_tables.py  a4b3548eb075_init_mock_data.py
src/: app.py
src/core/auth/entities/: auth_identity.py  magic_link_token.py  oauth_profile.py  refresh_token.py
src/core/auth/ports/: auth_identity_repository.py  email_sender.py  magic_link_repository.py  oauth_validator.py  refresh_token_repository.py  token_service.py
src/core/auth/use_cases/: dev_login.py  logout.py  magic_start.py  magic_verify.py  oauth_exchange.py  refresh_tokens.py
src/core/common/: exceptions.py  unit_of_work.py  use_case.py
src/core/operator/ports/: operator_repository.py
src/core/operator/read_models/: operator_search_read_model.py
src/core/operator/use_cases/: search_operators.py
src/core/tours/entities/: flight.py  hotel.py  (+3 more)
src/infrastructure/auth/: __init__.py  jwt_token_service.py  magic_tokens.py  oauth_validator.py
src/infrastructure/common/: db_unit_of_work.py
src/infrastructure/di/: container.py
src/infrastructure/email/: __init__.py  smtp_email_sender.py
tests/: conftest.py  test_utils.py  utils.py
(+55 files in other folders)
