[project]
name = "hajj-umrah-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "dishka>=1.7.2",
    "dynaconf>=3.2.11",
    "fastapi>=0.117.1",
    "fastapi-filter>=2.0.1",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.1.0",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
